--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -1,4 +1,5 @@
 <div class="container text-center">
+	
 	<h1 class="welcome"> Welcome </h1>
 	<p class="lead"> Please create an account or log in to enjoy our news feeds. </p>
 	
@@ -7,6 +8,7 @@
 			
 			<!-- First & Last Names -->
 			<div class="row">
+
 				<div class="col-md-6">
 					<div class="form-group">
 						<label class="control-label sr-only" for="Firstname"> Firstname </label>
@@ -26,10 +28,12 @@
 						</div><!-- class input-group -->
 					</div><!-- class form-group -->
 				</div><!-- class col-md-6 -->
+
 			</div><!-- class row -->
 
 			<!-- Email & Login -->
 			<div class="row">
+
 				<div class="col-md-6">
 					<div class="form-group">
 						<label class="control-label sr-only" for="Email"> Email </label>
@@ -49,12 +53,14 @@
 						</div><!-- class input-group -->
 					</div><!-- class col-md-6 -->
 				</div><!-- class col-md-6 -->
+
 			</div><!-- class row -->
 
 
 			<!-- Password & Confirmation -->
 			<div class="row">
 				<div clas="form-group">
+					
 					<div class="col-md-6">
 						<div class="form-group">
 							<label class="control-label sr-only" for="Password"> Password </label>
@@ -74,15 +80,20 @@
 							</div><!-- class input-group -->
 						</div><!-- class col-md-6 -->
 					</div><!-- class col-md-6 -->
+
 				</div><!-- class form-group -->
 			</div><!-- class row -->
 
 			<!-- Submit -->
 			<div class="row">
+
 				<div class="col-md-4 col-md-offset-4">
 					<a class="btn btn-primary" href="#/client" role="submit"> Sign Up </a>
 				</div><!-- class col-md-6 -->
+
 			</div><!-- class row -->
 
 		</form><!-- named signUpForm -->
 	</div><!-- class container jumbotron -->
+
+</div><!-- class container text-center -->
