--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -52,7 +52,7 @@
 			<div  class="newsContent" ng-show="showArticle">
 				<div class="container-fluid jumbotron">
 					<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-left" ng-click="delete(currentArticle.id)"> Delete </button>
-					<a class="btn-lg pull-right" ng-click="closeArticle()" role="button"><span class="glyphicon glyphicon-remove"></span></a>
+					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<img class="center-block img-circle" ng-src="{{currentArticle.img_path}}" alt="" width="150" height="150">
 					<h2 class="lead">{{currentArticle.title}}<em>—{{currentArticle.timestamp}}</em></h2>
 					<p class="text-justify">{{currentArticle.content}}</p>
