--- a/app/css/app.css
+++ b/app/css/app.css
@@ -7,19 +7,12 @@
 .cat {
   cursor: pointer;
 }
-.container {
-  margin-top: 60px;
-}
-.welcome {
-  font-size: 400%;
+.panel.panel-info {
+  margin-top: 10em;
 }
 
 .rowForm {
   margin-bottom: 1em;
-}
-
-.formContainer {
-  width: 60%;
 }
 
 .side-bar {
@@ -45,28 +38,48 @@
 }
 
 .infoUser {
-  padding-top: 5em;
-}
-.jumbotron p.dropText {
-  font-size: 100%;
-  padding-top: 2.6em;
+  padding-top: 4em;
 }
 
 .dropText {
-  font-size: 20%;
+  height: 200px;
+}
+
+.dropText p.lead.imgArticle {
+  border: 0.1em dashed grey;
+  border-radius: 20%;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  font-size: 120%;
+  padding-top: 4.5em;
+}
+
+.dropImg.imgArticle {
   border: 0.1em dashed grey;
   border-radius: 50%;
-  width: 124px;
-  height: 124px;
+  width: 200px;
+  height: 200px;
   margin: auto;
-  position: relative;
+}
+
+
+.dropText p.lead {
+  border: 0.1em dashed grey;
+  border-radius: 20%;
+  width: 140px;
+  height: 140px;
+  margin: auto;
+  font-size: 120%;
+  padding-top: 4.5em;
 }
 
 .dropImg {
   border: 0.1em dashed grey;
   border-radius: 50%;
-  width: 124px;
-  height: 124px;
+  width: 140px;
+  height: 140px;
+  margin: auto;
 }
 
 .dragover {
