--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -1,5 +1,4 @@
 <div class="container" ng-init="display()" ng-controller="NewsCtrl as news">
-
 	<div class="row">
 		
 		<div class="col-md-3 side-bar">
@@ -12,8 +11,8 @@
 							<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 						</button>
 					</span>
-				</div><!-- /input-group -->
-			</div><!-- class col-md-12 -->
+				</div><!-- class input-group-btn -->
+			</div><!-- class col-md-12 srcInput -->
 			
 			<div class="col-md-12">
 				<ul class="nav nav-pills well nav-stacked" role="navigation">
@@ -25,43 +24,46 @@
 				</ul><!-- class nav nav-pills nav-stacked -->
 			</div><!--class col-md-12 -->
 
-		</div><!-- class col-md-3 -->
+		</div><!-- class col-md-3 side-bar -->
 
 		<div class="col-md-9 text-center">
-			<h1><span class="glyphicon glyphicon-book"></span> Latest News</h1>
+			
+			<h1><span class="glyphicon glyphicon-book"></span> Latest News </h1>
 			
 			<!-- All News -->
 			<div class="newsContent" ng-hide="showArticle">
 				<div id="{{article.id}}" class="media well" ng-repeat="article in articles track by article.id">
+					
 					<div class="pull-left media-middle">
-						<a>
-							<img class="media-object" ng-src="{{article.img_path}}" alt="" width="300" height="200">
-						</a>
-					</div>
+						<img class="media-object" ng-src="{{article.img_path}}" alt="" width="300" height="200">
+					</div><!-- class pull-left media-middle -->
+					
 					<div class="media-body">
 						<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-right" ng-click="delete(article.id)"> Delete </button>
-						<h4 class="text-left lead media-heading"> {{article.title}} <small><em> —{{article.timestamp}} </em></small></h4>
+						<h4 class="text-left lead media-heading"> {{article.title}} <small><em> — {{article.timestamp}} </em></small></h4>
 						<h5 class="text-left"><small><em> by {{article.username}} </em></small></h5>
 						<p class="text-justify preview"> {{article.content}} </p>
 						<a data-toggle="modal" data-target="#myModal" ng-click="readMore(article.id)"  class="btn btn-primary"> Read More </a>
-					</div>
+					</div><!-- class media-body -->
+
 				</div><!-- class media well -->
 			</div><!-- class newsContent -->
 
 			<!-- One News -->
 			<div  class="newsContent" ng-show="showArticle">
+				
 				<div class="container-fluid jumbotron">
 					<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-left" ng-click="delete(currentArticle.id)"> Delete </button>
 					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<img class="center-block img-circle" ng-src="{{currentArticle.img_path}}" alt="" width="150" height="150">
-					<h2 class="lead"> {{currentArticle.title}} <em> —{{currentArticle.timestamp}} </em></h2>
+					<h2 class="lead"> {{currentArticle.title}} <small><em> — {{currentArticle.timestamp}} </em></small></h2>
 					<p class="text-justify"> {{currentArticle.content}} </p>
 					<cite><em> by {{currentArticle.username}} </em></cite>
-				</div>
+				</div><!-- class container-fluid jumbotron -->
+
 			</div><!-- class newsContent -->
 
-		</div><!-- class col-md-9 -->
+		</div><!-- class col-md-9 text-center -->
 
 	</div><!-- class row -->
-
 </div><!-- class container -->
