--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -7,7 +7,6 @@
 		</div><!-- class panel-heading -->
 
 		<div class="panel-body">
-			
 			<form name="updateProfil">	
 				
 				<div class="row">
@@ -78,9 +77,9 @@
 				</div><!-- class row -->
 
 			</form><!-- updateProfil -->
-
 		</div><!-- class panel-body -->
-	</div><!-- class container jumbotron -->
+
+	</div><!-- class panel panel-info -->
 
 </div><!-- class container text-center -->
 
