--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -28,40 +28,46 @@
 
 		<div class="col-md-9 text-center">
 			
-			<h1><span class="glyphicon glyphicon-book"></span> Latest News </h1>
-			
-			<!-- All News -->
-			<div class="newsContent" ng-hide="showArticle">
-				<div id="{{article.id}}" class="media well" ng-repeat="article in articles track by article.id">
-					
-					<div class="pull-left media-middle">
-						<img class="media-object" ng-src="{{article.img_path}}" alt="" width="300" height="200">
-					</div><!-- class pull-left media-middle -->
-					
-					<div class="media-body">
-						<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-right" ng-click="delete(article.id)"> Delete </button>
-						<h4 class="text-left lead media-heading"> {{article.title}} <small><em> — {{article.timestamp}} </em></small></h4>
-						<h5 class="text-left"><small><em> by {{article.username}} </em></small></h5>
-						<p class="text-justify preview"> {{article.content}} </p>
-						<a data-toggle="modal" data-target="#myModal" ng-click="readMore(article.id)"  class="btn btn-primary"> Read More </a>
-					</div><!-- class media-body -->
-
-				</div><!-- class media well -->
-			</div><!-- class newsContent -->
-
-			<!-- One News -->
-			<div  class="newsContent" ng-show="showArticle">
+			<div class="panel panel-default">
 				
-				<div class="container-fluid jumbotron">
-					<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-left" ng-click="delete(currentArticle.id)"> Delete </button>
-					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<img class="center-block img-circle" ng-src="{{currentArticle.img_path}}" alt="" width="150" height="150">
-					<h2 class="lead"> {{currentArticle.title}} <small><em> — {{currentArticle.timestamp}} </em></small></h2>
-					<p class="text-justify"> {{currentArticle.content}} </p>
-					<cite><em> by {{currentArticle.username}} </em></cite>
-				</div><!-- class container-fluid jumbotron -->
+				<div class="panel-heading">
+					<h1><span class="glyphicon glyphicon-book"></span> Latest News </h1>
+				</div><!-- class panel-heading -->
 
-			</div><!-- class newsContent -->
+				<!-- All News -->
+				<div class="newsContent panel-body" ng-hide="showArticle">		
+					<div id="{{article.id}}" class="media well" ng-repeat="article in articles track by article.id">
+						
+						<div class="pull-left media-middle">
+							<img class="media-object" ng-src="{{article.img_path}}" alt="" width="300" height="200">
+						</div><!-- class pull-left media-middle -->
+						
+						<div class="media-body">
+							<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-right" ng-click="delete(article.id)"> Delete </button>
+							<h4 class="text-left lead media-heading"> {{article.title}} <small><em> — {{article.timestamp}} </em></small></h4>
+							<h5 class="text-left"><small><em> by {{article.username}} </em></small></h5>
+							<p class="text-justify preview"> {{article.content}} </p>
+							<a data-toggle="modal" data-target="#myModal" ng-click="readMore(article.id)"  class="btn btn-primary"> Read More </a>
+						</div><!-- class media-body -->
+
+					</div><!-- class media well -->
+				</div><!-- class newsContent panel-body -->
+
+				<!-- One News -->
+				<div  class="newsContent panel-body" ng-show="showArticle">
+					
+					<div class="container-fluid jumbotron">
+						<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-left" ng-click="delete(currentArticle.id)"> Delete </button>
+						<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<img class="center-block img-circle" ng-src="{{currentArticle.img_path}}" alt="" width="150" height="150">
+						<h2 class="lead"> {{currentArticle.title}} <small><em> — {{currentArticle.timestamp}} </em></small></h2>
+						<p class="text-justify"> {{currentArticle.content}} </p>
+						<cite><em> by {{currentArticle.username}} </em></cite>
+					</div><!-- class container-fluid jumbotron -->
+
+				</div><!-- class newsContent panel-body -->
+				
+			</div><!-- class panel panel-default" -->
 
 		</div><!-- class col-md-9 text-center -->
 
