--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -48,7 +48,7 @@
 						<div class="col-md-8 col-md-offset-2">
 							<div class="drop-box" ng-file-drop ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
 								<div class="dropText" ng-hide="imgIsEnable"><p class="lead imgArticle"> Drop your picture ! (or click) <span class="glyphicon glyphicon-cloud-download"></span></p></div>
-								<img class="dropImg" ng-show="imgIsEnable" ng-src="{{imgSrc}}"/>
+								<img class="dropImgAdmin" ng-show="imgIsEnable" ng-src="{{fileName}}"/>
 							</div>
 						</div><!-- class col-md-8 col-md-offset-2 -->
 
