--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center" ng-controller="RegistrarCtrl">
 	
 	<div class="panel panel-primary">
 		
@@ -8,7 +8,7 @@
 		</div><!-- class panel-heading -->
 
 		<div class="panel-body">
-			<form name="signUpForm">
+			<form name="signUpForm" ng-submit="register(user)" novalidate>
 				<div class="row">
 					
 					<!-- Firstname -->
@@ -17,7 +17,7 @@
 							<label class="control-label sr-only" for="Firstname"> Firstname </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
-								<input type="text" class="form-control" ng-model="firstname" name="firstname" id="firstname" placeholder="Firstname...">
+								<input type="text" class="form-control" ng-model="user.firstname" name="firstname" id="firstname" placeholder="Firstname..." ng-minlength="2" ng-maxlength="60" required>
 							</div><!-- class input-group -->
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 col-md-offset-1 -->
@@ -28,7 +28,7 @@
 							<label class="control-label sr-only" for="Lastname"> Lastname </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
-								<input type="text" class="form-control" ng-model="lastname" name="lastname" id="lastname" placeholder="Lastname...">
+								<input type="text" class="form-control" ng-model="user.lastname" name="lastname" id="lastname" placeholder="Lastname..." ng-minlength="2" ng-maxlength="60" required>
 							</div><!-- class input-group -->
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 -->
@@ -39,18 +39,18 @@
 							<label class="control-label sr-only" for="Email"> Email </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-								<input type="email" class="form-control" ng-model="email" name="email" id="email" placeholder="Email...">
+								<input type="email" class="form-control" ng-model="user.email" name="email" id="email" placeholder="Email..." ng-maxlength="255" required>
 							</div><!-- class input-group -->
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 col-md-offset-1 -->
 
-					<!-- Login -->
+					<!-- Username -->
 					<div class="col-md-5">
 						<div class="form-group">
-							<label class="control-label sr-only" for="Login"> Login </label>
+							<label class="control-label sr-only" for="username"> Username </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-								<input type="text" class="form-control" ng-model="login" name="login" id="login" placeholder="Login...">
+								<input type="text" class="form-control" ng-model="user.username" name="username" id="username" placeholder="username..." ng-minlength="2" ng-maxlength="60" required>
 							</div><!-- class input-group -->
 						</div><!-- class form-groupe -->
 					</div><!-- class col-md-5 -->
@@ -61,7 +61,7 @@
 							<label class="control-label sr-only" for="Password"> Password </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-								<input type="password" class="form-control" ng-model="password" name="password" id="password" placeholder="Password...">
+								<input type="password" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Password..." ng-minlength="8" ng-maxlength="100" required>
 							</div><!-- class input-group -->
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 col-md-offset-1 -->
@@ -72,14 +72,14 @@
 							<label class="control-label sr-only" for="Confirm"> Confirm </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
-								<input type="password" class="form-control" ng-model="confirm" name="confirm" id="confirm" placeholder="Confirm...">
+								<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required>
 							</div><!-- class input-group -->
 						</div><!-- form-groupe -->
 					</div><!-- class col-md-5 -->
 
 					<!-- Submit -->
 					<div class="col-md-4 col-md-offset-4">
-						<a class="btn btn-primary" href="#/client" role="submit"> Sign Up </a>
+						<button class="btn btn-primary" type="submit"> Sign Up </button>
 					</div><!-- class col-md-6 -->
 
 				</div><!-- class row -->
