--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -9,71 +9,95 @@
 
 		<div class="panel-body">
 			<form name="signUpForm" ng-submit="register(user)" novalidate>
-				<div class="row">
-					
+				<div class="row">	
 					<!-- Firstname -->
 					<div class="col-md-5 col-md-offset-1">
-						<div class="form-group">
-							<label class="control-label sr-only" for="Firstname"> Firstname </label>
+						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.firstname.$valid, 'has-error': !signUpForm.firstname.$valid && signUpForm.firstname.$dirty}">
 							<div class="input-group">
-								<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
-								<input type="text" class="form-control" ng-model="user.firstname" name="firstname" id="firstname" placeholder="Firstname..." ng-minlength="2" ng-maxlength="60" required>
+								<span class="input-group-addon">
+									<span class="glyphicon glyphicon-hand-right"></span>
+								</span>
+								<input type="text" class="form-control" ng-model="user.firstname" name="firstname" id="firstname" placeholder="Firstname..." ng-minlength="2" ng-maxlength="60" aria-describedby="firstnameStatus" required>
 							</div><!-- class input-group -->
+							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.firstname.$valid" aria-hidden="true"></span>
+      						<span id="firstnameStatus" class="sr-only">(success)</span>
+      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.firstname.$valid && signUpForm.firstname.$dirty" aria-hidden="true"></span>
+  							<span id="firstnameStatus" class="sr-only">(warning)</span>
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 col-md-offset-1 -->
 
 					<!-- Lastname -->
 					<div class="col-md-5">
-						<div class="form-group">
+						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.lastname.$valid, 'has-error': !signUpForm.lastname.$valid && signUpForm.lastname.$dirty}">
 							<label class="control-label sr-only" for="Lastname"> Lastname </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
 								<input type="text" class="form-control" ng-model="user.lastname" name="lastname" id="lastname" placeholder="Lastname..." ng-minlength="2" ng-maxlength="60" required>
 							</div><!-- class input-group -->
+							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.lastname.$valid" aria-hidden="true"></span>
+      						<span id="lastnameStatus" class="sr-only">(success)</span>
+      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.lastname.$valid && signUpForm.lastname.$dirty" aria-hidden="true"></span>
+  							<span id="lastnameStatus" class="sr-only">(warning)</span>
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 -->
 
 					<!-- Email -->
 					<div class="col-md-5 col-md-offset-1">
-						<div class="form-group">
+						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.email.$valid, 'has-error': !signUpForm.email.$valid && signUpForm.email.$dirty}">
 							<label class="control-label sr-only" for="Email"> Email </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
 								<input type="email" class="form-control" ng-model="user.email" name="email" id="email" placeholder="Email..." ng-maxlength="255" required>
 							</div><!-- class input-group -->
+							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.email.$valid" aria-hidden="true"></span>
+      						<span id="emailStatus" class="sr-only">(success)</span>
+      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.email.$valid && signUpForm.email.$dirty" aria-hidden="true"></span>
+  							<span id="emailStatus" class="sr-only">(warning)</span>
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 col-md-offset-1 -->
 
 					<!-- Username -->
 					<div class="col-md-5">
-						<div class="form-group">
+						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.username.$valid, 'has-error': !signUpForm.username.$valid && signUpForm.username.$dirty}">
 							<label class="control-label sr-only" for="username"> Username </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
 								<input type="text" class="form-control" ng-model="user.username" name="username" id="username" placeholder="username..." ng-minlength="2" ng-maxlength="60" required>
 							</div><!-- class input-group -->
+							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.username.$valid" aria-hidden="true"></span>
+      						<span id="usernameStatus" class="sr-only">(success)</span>
+      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.username.$valid && signUpForm.username.$dirty" aria-hidden="true"></span>
+  							<span id="usernameStatus" class="sr-only">(warning)</span>
 						</div><!-- class form-groupe -->
 					</div><!-- class col-md-5 -->
 
 					<!-- Password -->						
 					<div class="col-md-5 col-md-offset-1">
-						<div class="form-group">
+						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password.$valid, 'has-error': !signUpForm.password.$valid && signUpForm.password.$dirty}">
 							<label class="control-label sr-only" for="Password"> Password </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
 								<input type="password" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Password..." ng-minlength="8" ng-maxlength="100" required>
 							</div><!-- class input-group -->
+							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password.$valid" aria-hidden="true"></span>
+      						<span id="passwordStatus" class="sr-only">(success)</span>
+      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.password.$valid && signUpForm.password.$dirty" aria-hidden="true"></span>
+  							<span id="passwordStatus" class="sr-only">(warning)</span>
 						</div><!-- class form-group -->
 					</div><!-- class col-md-5 col-md-offset-1 -->
 
 					<!-- Confirmation -->
 					<div class="col-md-5">
-						<div class="form-group">
+						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password_confirmation.$valid && confirm, 'has-error': (!signUpForm.password_confirmation.$valid || !confirm) && signUpForm.password_confirmation.$dirty}">
 							<label class="control-label sr-only" for="Confirm"> Confirm </label>
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
-								<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required>
+								<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" ng-change="checkPassword(user)" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required>
 							</div><!-- class input-group -->
+							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password_confirmation.$valid && confirm" aria-hidden="true"></span>
+      						<span id="password_confirmationStatus" class="sr-only">(success)</span>
+      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="(!signUpForm.password_confirmation.$valid || !confirm) && signUpForm.password_confirmation.$dirty" aria-hidden="true"></span>
+  							<span id="password_confirmationStatus" class="sr-only">(warning)</span>
 						</div><!-- form-groupe -->
 					</div><!-- class col-md-5 -->
 
