--- a/app/css/app.css
+++ b/app/css/app.css
@@ -4,6 +4,11 @@
   }
 }
 
+.loginUpdate {
+  margin-bottom: 1.5em;
+  margin-top: 1em;
+}
+
 .cat {
   cursor: pointer;
 }
@@ -93,6 +98,6 @@
 }
 
 .dragover {
-    border: 0.1em dashed black;
-    opacity: 0.4;
+  border: 0.1em dashed black;
+  opacity: 0.4;
 }
