--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -15,13 +15,23 @@
 					<div class="col-md-6">
 						
 						<div class="col-md-6">
-							<h3 class="lead" ng-click="updateUsername()"> {{currentUser.username}} </h3>
+							<h2 ng-hide="updateLogin || !currentUser.username" class="lead" ng-click="showInput()"> {{currentUser.username}} </h2>
+							
+							<div class="input-group loginUpdate" ng-show="updateLogin || !currentUser.username">
+								<input ng-model="user.username" class="form-control lead" type="text" placeholder="New Login..."/>
+								<span class="input-group-btn">
+									<button class="btn btn-info" ng-click="loginUpdate()" type="button"><span class="glyphicon glyphicon-ok"></span></button>
+								</span><!-- class input-group-btn -->
+							</div><!-- /input-group -->
+							
 							<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
 								<div class="dropText" ng-hide="currentUser.img"><p class="lead"> Drop your picture ! (or click) <span class="glyphicon glyphicon-cloud-download"></span></p></div>
 								<img class="dropImg" ng-show="currentUser.img" ng-src="{{currentUser.img}}"/>
 							</div><!-- class drop-box -->
-								<h6 class="text-info" ng-show="currentUser.img"><em>* Click on your picture to Edit it! </em></h6>
-								<h6 class="text-danger"><em>* Account created {{currentUser.created_at}} </em></h6>
+							
+							<h6 class="text-info" ng-show="currentUser.img"><em>* Click on your picture to Edit it! </em></h6>
+							<h6 class="text-danger"><em>* Account created {{currentUser.created_at}} </em></h6>
+
 						</div><!-- class col-md-6 -->
 
 						<div class="col-md-6 infoUser">
@@ -36,43 +46,50 @@
 					<div class="col-md-6">
 						
 						<h2 class="lead"> Change your password : </h2>
+						<form novalidate name="changePasswordForm">
+							
+							<div  class="col-md-8 col-md-offset-2">
+								<div class="form-group">
+									<label class="control-label sr-only" for="Current"> Current </label>
+									<div class="input-group">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+										<input type="password" class="form-control" ng-model="pwd.current" name="current" id="current" placeholder="Current...">
+									</div><!-- class input-group -->
+								</div><!-- class form-group -->
+							</div><!--  class col-md-8 col-md-offset-2 -->
 
-						<div  class="col-md-8 col-md-offset-2">
-							<div class="form-group">
-								<label class="control-label sr-only" for="Current"> Current </label>
-								<div class="input-group">
-									<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-									<input type="password" class="form-control" ng-model="current" name="current" id="current" placeholder="Current...">
-								</div><!-- class input-group -->
-							</div><!-- class form-group -->
-						</div><!--  class col-md-8 col-md-offset-2 -->
+							<div  class="col-md-8 col-md-offset-2">
+								<div class="form-group">
+									<label class="control-label sr-only" for="Author"> New </label>
+									<div class="input-group">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+										<input type="password" class="form-control" ng-model="pwd.password" name="new" id="new" placeholder="New...">
+									</div><!-- class input-group -->
+								</div><!-- class form-group -->
+							</div><!-- class col-md-8 col-md-offset-2 -->
 
-						<div  class="col-md-8 col-md-offset-2">
-							<div class="form-group">
-								<label class="control-label sr-only" for="Author"> New </label>
-								<div class="input-group">
-									<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-									<input type="password" class="form-control" ng-model="new" name="new" id="new" placeholder="New...">
-								</div><!-- class input-group -->
-							</div><!-- class form-group -->
-						</div><!-- class col-md-8 col-md-offset-2 -->
+							<div class="col-md-8 col-md-offset-2">
+								<div class="form-group">
+									<label class="control-label sr-only" for="Author"> Confirm </label>
+									<div class="input-group">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>
+										<input type="password" class="form-control" ng-model="pwd.confirm" name="confirm" id="confirm" placeholder="Confirm...">
+									</div><!-- class input-group -->
+								</div><!-- class form-group -->
+							</div><!--  class col-md-8 col-md-offset-2 -->
+							
+							<!-- Submit -->
+							<div class="col-md-12">
+								<button class="btn btn-success btn-md" type="submit" ng-click="updatePassword()"> Change </button>
+							</div><!-- class col-md-4 col-md-offset-7 -->
 
-						<div class="col-md-8 col-md-offset-2">
-							<div class="form-group">
-								<label class="control-label sr-only" for="Author"> Confirm </label>
-								<div class="input-group">
-									<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>
-									<input type="password" class="form-control" ng-model="confirm" name="confirm" id="confirm" placeholder="Confirm...">
-								</div><!-- class input-group -->
-							</div><!-- class form-group -->
-						</div><!--  class col-md-8 col-md-offset-2 -->
-						
-						<!-- Submit -->
-						<div class="col-md-12">
-							<a draggable="true" class="btn btn-success btn-md" role="submit"> Change </a>
-						</div><!-- class col-md-4 col-md-offset-7 -->
+						</form>
 
 					</div><!-- class col-md-6 -->
+
+					<div class="col-md-12">
+						<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal"> Delete Account </button>
+					</div><!-- col-md-12 -->
 
 				</div><!-- class row -->
 
@@ -82,6 +99,26 @@
 	</div><!-- class panel panel-info -->
 
 </div><!-- class container text-center -->
+
+
+<!-- Delete account Modal (confirmation) -->
+<div id="myModal" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"> WARNING: Delete Account </h4>
+      </div>
+      <div class="modal-body">
+        <p> Are you sure about that ? </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="deleteAccount()"> Yes </button>
+        <button type="button" class="btn btn-success" data-dismiss="modal"> No </button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 <script type="text/javascript">
 jQuery(function($) {
