--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -100,6 +100,26 @@
 
 </div><!-- class container text-center -->
 
+
+<!-- Delete account Modal (confirmation) -->
+<div id="myModal" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"> WARNING: Delete Account </h4>
+      </div>
+      <div class="modal-body">
+        <p> Are you sure about that ? </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="deleteAccount()"> Yes </button>
+        <button type="button" class="btn btn-success" data-dismiss="modal"> No </button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 <script type="text/javascript">
 jQuery(function($) {
 	jQuery.event.props.push('dataTransfer');
