--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -1,4 +1,4 @@
-<div class="container text-center" ng-controller="RegistrarCtrl">
+<div class="container text-center" ng-controller="RegistrarCtrl" ng-include="template.url">
 	
 	<div class="panel panel-primary">
 		
