--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -50,7 +50,7 @@
 							<h4 class="text-left lead media-heading"> {{article.title}} <small><em> — {{article.timestamp}} </em></small></h4>
 							<h5 class="text-left"><small><em> by {{article.username}} </em></small></h5>
 							<p class="text-justify preview"> {{article.content}} </p>
-							<a data-toggle="modal" data-target="#myModal" ng-click="readMore(article.id)"  class="btn btn-primary"> Read More </a>
+							<a ng-click="readMore(article.id)"  class="btn btn-primary"> Read More </a>
 						</div><!-- class media-body -->
 
 					</div><!-- class media well -->
